2005-06-10  Juanma Barranquero  <lekktu@gmail.com>

	* ido.el (ido-mode, ido-file-extensions-order)
	(ido-default-file-method, ido-default-buffer-method)
	(ido-max-prospects, ido-slow-ftp-hosts, ido-setup-hook)
	(ido-decorations, ido-read-file-name-as-directory-commands)
	(ido-read-file-name-non-ido, ido-work-directory-list)
	(ido-ignore-item-temp-list, ido-current-directory)
	(ido-magic-forward-char, ido-enter-find-file)
	(ido-enter-switch-buffer, ido-visit-buffer, ido-switch-buffer)
	(ido-find-file, ido-read-buffer): Fix typos in docstrings.

2005-06-10  Lute Kamstra  <lute@gnu.org>

	* play/dunnet.el (dun-mode): Use define-derived-mode.
	(dungeon-mode-map): Rename to dun-mode-map.  Keep old name as an
	obsolete alias.

2005-06-10  Miles Bader  <miles@gnu.org>

	* textmodes/flyspell.el (flyspell-incorrect, flyspell-duplicate):
	Remove "-face" suffix from face names.
	(flyspell-incorrect-face, flyspell-duplicate-face):
	New backward-compatibility aliases for renamed faces.
	(flyspell-mode-on, make-flyspell-overlay)
	(flyspell-highlight-incorrect-region)
	(flyspell-highlight-duplicate-region)
	(flyspell-display-next-corrections)
	(flyspell-auto-correct-previous-word): Use renamed flyspell faces.

	* textmodes/texinfo.el (texinfo-heading): Remove "-face" suffix
	from face name.
	(texinfo-heading-face): New backward-compatibility alias for
	renamed face.
	(texinfo-heading-face): Use renamed texinfo-heading face.

	* textmodes/tex-mode.el (tex-math, tex-verbatim): Remove "-face"
	suffix from face names.
	(tex-math-face, tex-verbatim-face):
	New backward-compatibility aliases for renamed faces.
	(tex-math-face, tex-verbatim-face): Use renamed tex-mode faces.
	(tex-insert-quote): Use `tex-verbatim-face' variable instead of
	literal face name.

	* textmodes/table.el (table-cell): Remove "-face" suffix from face
	name.
	(table-cell-face): New backward-compatibility alias for renamed face.
	(table--put-cell-face-property, table--update-cell-face):